# dime

./: .gitmodules  3DFace_8h_source.html  Arc_8h_source.html  Array_8h_source.html  BSPTree_8h_source.html  Base_8h_source.html  Basic_8h_source.html  Block_8h_source.html  BlocksSection_8h_source.html  Box_8h_source.html  CMakeLists.txt  ChangeLog.sh  Changes.taendl  Circle_8h_source.html  Class_8h_source.html  ClassesSection_8h_source.html  Dict_8h_source.html  DoubleRecord_8h_source.html  Ellipse_8h_source.html  EntitiesSection_8h_source.html  Entity_8h_source.html  ExtrusionEntity_8h_source.html  FAQ  FaceEntity_8h_source.html  FloatRecord_8h_source.html  HeaderSection_8h_source.html  HexRecord_8h_source.html  INSTALL  Input_8h_source.html  Insert_8h_source.html  Int16Record_8h_source.html  Int32Record_8h_source.html  Int8Record_8h_source.html  LWPolyline_8h_source.html  LayerTable_8h_source.html  Layer_8h_source.html  Line_8h_source.html  Linear_8h_source.html  Makefile.am  Makefile.in  (+312 more)
.github/workflows/: codeql.yml  continuous-integration-workflow.yml  documentation-workflow.yml
build-tmake/: common.pro  dime.pro  makefile
cfg/: wrapmsvc.cpp
contrib/: README  dime.dsw  dxf2vrml.dsw
docs/: dime.dox  dime.doxygen.awesome.cmake.in  dime.doxygen.cmake.in  dime.doxygen.in
dxf2vrml/: Makefile.am  Makefile.in  dxf2vrml.cpp
dxfsphere/: Makefile.am  Makefile.in  dxfsphere.cpp
html/: Makefile.am  Makefile.in
include/: config.h.cmake.in  config.h.in
include/dime/: Base.h  Basic.h  Input.h  Layer.h  Model.h  Output.h  RecordHolder.h  State.h
include/dime/classes/: Class.h  UnknownClass.h
include/dime/convert/: convert.h  layerdata.h
include/dime/entities/: 3DFace.h  Arc.h  Block.h  Circle.h  Ellipse.h  Entity.h  ExtrusionEntity.h  FaceEntity.h  Insert.h  LWPolyline.h  Line.h  Point.h  Polyline.h  Solid.h  Spline.h  Text.h  Trace.h  UnknownEntity.h  Vertex.h
include/dime/objects/: Object.h  UnknownObject.h
include/dime/records/: DoubleRecord.h  FloatRecord.h  HexRecord.h  Int16Record.h  Int32Record.h  Int8Record.h  Record.h  StringRecord.h
include/dime/sections/: BlocksSection.h  ClassesSection.h  EntitiesSection.h  HeaderSection.h  ObjectsSection.h  Section.h  TablesSection.h  UnknownSection.h
include/dime/tables/: LayerTable.h  Table.h  TableEntry.h  UCSTable.h  UnknownTable.h
include/dime/util/: Array.h  BSPTree.h  Box.h  Dict.h  Linear.h  MemHandler.h
search/: all_0.js  all_1.js  all_2.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  classes_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_b.js  functions_e.js  functions_f.js  pages_0.js  searchdata.js
src/: Base.cpp  Basic.cpp  CMakeLists.txt  Input.cpp  Layer.cpp  Makefile.am  Makefile.in  Model.cpp  Output.cpp  RecordHolder.cpp  State.cpp
src/classes/: Class.cpp  Makefile.am  Makefile.in  UnknownClass.cpp
src/convert/: 3dfaceconvert.cpp  Makefile.am  Makefile.in  arc.cpp  arcconvert.cpp  circleconvert.cpp  convert.cpp  convert_funcs.h  ellipseconvert.cpp  layerdata.cpp  lineconvert.cpp  linesegment.cpp  linesegment.h  lwpolylineconvert.cpp  pointconvert.cpp  polylineconvert.cpp  solidconvert.cpp  traceconvert.cpp
src/entities/: 3DFace.cpp  Arc.cpp  Block.cpp  Circle.cpp  Ellipse.cpp  Entity.cpp  ExtrusionEntity.cpp  FaceEntity.cpp  Insert.cpp  LWPolyline.cpp  Line.cpp  Makefile.am  Makefile.in  Point.cpp  Polyline.cpp  Solid.cpp  Spline.cpp  Text.cpp  Trace.cpp  UnknownEntity.cpp  Vertex.cpp
src/objects/: Makefile.am  Makefile.in  Object.cpp  UnknownObject.cpp
src/records/: DoubleRecord.cpp  FloatRecord.cpp  HexRecord.cpp  Int16Record.cpp  Int32Record.cpp  Int8Record.cpp  Makefile.am  Makefile.in  Record.cpp  StringRecord.cpp
src/sections/: BlocksSection.cpp  ClassesSection.cpp  EntitiesSection.cpp  HeaderSection.cpp  Makefile.am  Makefile.in  ObjectsSection.cpp  Section.cpp  TablesSection.cpp  UnknownSection.cpp
src/tables/: LayerTable.cpp  Makefile.am  Makefile.in  Table.cpp  TableEntry.cpp  UCSTable.cpp  UnknownTable.cpp
src/util/: Array.cpp  BSPTree.cpp  Box.cpp  Dict.cpp  Linear.cpp  Makefile.am  Makefile.in  MemHandler.cpp
testfiles/Bug1/: README.txt  testFile_Bug01.wrl  testFile_Bug01_original.wrl
testfiles/Bug2/: README.txt  testFile_Bug02.dxf  testFile_Bug02.wrl  testFile_Bug02_original.wrl
testfiles/Bug3/: README.txt  testFile_Bug03.dxf
testfiles/Bug4/: README.txt  testFile_Bug04.dxf  testFile_Bug04.wrl
testfiles/Bug5/: README.txt  testFile_Bug05.dxf  testFile_Bug05.wrl
